Partial_14Dec2021/force-app/main/default/objects/Order_Line_Item__c/Order_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Custom Order Line Item object used after the project revamp</description>
    <label>Order Line Item</label>
    <nameField>
        <displayFormat>OLI-{0000}</displayFormat>
        <label>Order Line Items Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>