Partial_14Dec2021/force-app/main/default/objects/Order_Line_Item__c/fields/Additional_Disc_on_APPL_disc2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Disc_on_APPL_disc2__c</fullName>
    <formula>((MRP_Post_Discount__c -  Net_Invoice_Value_from_APPL2__c ) /  MRP_Post_Discount__c)*100</formula>
    <label>Additional Disc on APPL disc2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>