Partial_14Dec2021/force-app/main/default/objects/Order_Line_Item__c/fields/APPL__c.field-meta.xml
<CustomField>
    <fullName>APPL__c</fullName>
    <label>APPL Discount</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>