Partial_14Dec2021/force-app/main/default/objects/Order_Line_Item__c/fields/Delivery_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_End_Date__c</fullName>
    <label>Delivery End Date</label>
    <type>Date</type>
</CustomField>