Partial_14Dec2021/force-app/main/default/objects/Order_Line_Item__c/fields/Discounted_Price2__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Price2__c</fullName>
    <formula>IF( ISBLANK(Extra_Discount__c),
MRP_Post_Discount__c ,
ABS( (MRP_Value__c) - ( Extra_Discount__c * MRP_Value__c)))</formula>
    <label>Discounted Price2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>