Partial_14Dec2021/force-app/main/default/objects/Order_Line_Item__c/fields/Extra_Discount__c.field-meta.xml
<CustomField>
    <fullName>Extra_Discount__c</fullName>
    <label>Extra Discount</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>