Partial_14Dec2021/force-app/main/default/objects/Order_Line_Item__c/fields/MRP_Post_Discount__c.field-meta.xml
<CustomField>
    <fullName>MRP_Post_Discount__c</fullName>
    <label>MRP Post Discount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>