Partial_14Dec2021/force-app/main/default/objects/Order_Line_Item__c/fields/MRP_Value__c.field-meta.xml
<CustomField>
    <fullName>MRP_Value__c</fullName>
    <label>MRP Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>