Partial_14Dec2021/force-app/main/default/objects/Order_Line_Item__c/fields/New_Order__c.field-meta.xml
<CustomField>
    <fullName>New_Order__c</fullName>
    <label>New Order</label>
    <referenceTo>New_Order__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>