Partial_14Dec2021/force-app/main/default/objects/Order_Line_Item__c/fields/ORC_MARGIN_TO_DLR_DIST__c.field-meta.xml
<CustomField>
    <fullName>ORC_MARGIN_TO_DLR_DIST__c</fullName>
    <label>ORC/ MARGIN TO DLR/DIST</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>