Partial_14Dec2021/force-app/main/default/objects/Order_Line_Item__c/fields/ORC_Status__c.field-meta.xml
<CustomField>
    <fullName>ORC_Status__c</fullName>
    <label>ORC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Not Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>