Partial_14Dec2021/force-app/main/default/objects/Order_Line_Item__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Received</fullName>
            </value>
            <value>
                <fullName>Part Received</fullName>
            </value>
            <value>
                <fullName>Order Lost</fullName>
            </value>
            <value>
                <fullName>Order Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>