Partial_14Dec2021/force-app/main/default/objects/Order_Line_Item__c/fields/Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Order_Value__c</fullName>
    <label>Order Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>