Partial_14Dec2021/force-app/main/default/objects/Order_Line_Item__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20% advance with PO</fullName>
            </value>
            <value>
                <fullName>30 Days credit with PO</fullName>
            </value>
            <value>
                <fullName>90 Days credit with PO</fullName>
            </value>
            <value>
                <fullName>100% payment against delivery</fullName>
            </value>
            <value>
                <fullName>100% advance with PO</fullName>
            </value>
            <value>
                <fullName>20% advance &amp; Balance against Delivery</fullName>
            </value>
            <value>
                <fullName>30 days after delivery</fullName>
            </value>
            <value>
                <fullName>45 days after delivery</fullName>
            </value>
            <value>
                <fullName>60 days after delivery</fullName>
            </value>
            <value>
                <fullName>90 days after delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>