Partial_14Dec2021/force-app/main/default/objects/Order_Line_Item__c/fields/Price_List_Date__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Date__c</fullName>
    <label>Price List Date</label>
    <type>Date</type>
</CustomField>