Partial_14Dec2021/force-app/main/default/objects/Order_Line_Item__c/fields/Unique_Name_relation__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name_relation__c</fullName>
    <label>Unique Name relation</label>
    <length>60</length>
    <type>Text</type>
</CustomField>