Partial_14Dec2021/force-app/main/default/objects/Order_Line_Item__c/fields/Validity_for_the_Price__c.field-meta.xml
<CustomField>
    <fullName>Validity_for_the_Price__c</fullName>
    <label>Validity for the Price</label>
    <type>Date</type>
</CustomField>